--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="./node_modules/leaflet/dist/leaflet.css"></link>
+    <link rel="stylesheet" type="text/css" href="node_modules/Leaflet.MapCenterCoord/src/L.Control.MapCenterCoord.css"></link>
     <script src="./node_modules/leaflet/dist/leaflet.js"></script>
+    <script src="./node_modules/Leaflet.MapCenterCoord/src/L.Control.MapCenterCoord.js"></script>
     <style type="text/css">
 	#map { height: 100%; }
     </style>
@@ -9,5 +11,5 @@
   <body>
     <div id="map"></div>
   </body>
-  <script src="map.js"></script>
+  <script src="src/js/map.js"></script>
 </html>
