Layers are produced from the tileScript now

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <body>
     <div id="map"></div>
   </body>
+  <script src="layers/layers.js"></script>
   <script src="src/js/map.js"></script>
 </html>
